--- a/style.css
+++ b/style.css
@@ -77,17 +77,31 @@ h2, h3 {
     color: #AE7C78;
 }
 
+.header-navigation img,
+.footer-navigation img {
+    display: block;
+}
+
+.header-navigation a:hover::after,
+.header-navigation a:focus::after {
+   content: "";
+   height: 2px;
+   background: #AE7C78;
+   display: block;
+}
+
 /* main */
 .container {
-    width: 1440px;
+    /* width: 1440px; */
     margin: 0 auto;
 }
 
 /* верхний блок */
 .presentation {
+    width: 1200px;
     display: flex;
     justify-content: space-between;
-    margin: 82px 120px 48px;
+    margin: 82px auto 48px;
 }
 
 .wrapper {
@@ -121,8 +135,9 @@ h2, h3 {
 /* преимущества */
 
 .features {
-    margin: 0 120px 80px 120px;
-    height: 108px;
+    margin: 0 auto 80px;
+    width: 1200px;
+    min-height: 108px;
 }
 
 .features-list {
@@ -297,8 +312,9 @@ h2, h3 {
 /* каталог */
 
 .catalogue {
-    margin: 0 120px 80px 120px;
-    height: 442px;
+    margin: 0 auto 80px;
+    width: 1200px;
+    min-height: 442px;
 }
 .catalogue-list {
     height: inherit;
@@ -367,6 +383,12 @@ background-image: url(./img/weddings-bouquet.jpg);
     background-position: 0 0;
 }
 
+.catalogue-item:hover,
+.catalogue-item:focus {
+
+    box-shadow: inset 0 0 0 387px rgba(174, 124, 120, 0.4);
+}
+
 /* скидка */
 .sale {
     margin: 0 auto;
@@ -377,7 +399,6 @@ background-image: url(./img/weddings-bouquet.jpg);
     position: relative;
     color: #ffffff;
     background-color: #AE7C78;
-
 }
 
 .sale h2 {
@@ -405,7 +426,7 @@ background-image: url(./img/weddings-bouquet.jpg);
     width: 590px;
     height: 391px;
 
-    background-image: url(./img/img-for-sale.jpg);
+    background-image: url("img/img-for-sale.jpg");
     background-repeat: no-repeat;
     background-position: 0 0;
 
@@ -414,8 +435,9 @@ background-image: url(./img/weddings-bouquet.jpg);
 /* 4 шага */
 
 .steps-for-ideal {
-    margin: 0 120px 80px 120px;
-    height: 232px;
+    margin: 0 auto 80px;
+    width: 1200px;
+    min-height: 232px;
 }
 
 .steps-list {
@@ -495,13 +517,11 @@ background-image: url(./img/weddings-bouquet.jpg);
 
 /* новости */
 .news {
-    width: 1200px;
-    height: 462px;
     margin: 0 auto;
     margin-bottom: 80px;
-
+    width: 1200px;
+    min-height: 462px;
     display:flex;
-
 }
 
 .news h2 {
@@ -521,6 +541,7 @@ background-image: url(./img/weddings-bouquet.jpg);
     width: 96.76px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 
 }
 
@@ -570,6 +591,93 @@ background-image: url(./img/weddings-bouquet.jpg);
     font-weight: 500;
 }
 
+/* контакты */
+.contacts-map-wrapper {
+    position: relative;
+}
+
+.contacts-info {
+    width: 386px;
+    height: 520px;
+    border-radius: 12px;
+
+    position: absolute;
+    top: 52px;
+    left: 221px;
+
+    background-color: #ffffff;
+    box-shadow: 0px 4px 40px rgba(217, 217, 217, 0.3);
+}
+
+.contacts-info h2 {
+    margin: 40px 0 42px 36px;
+    font-family: "Playfair Display", "Arial", sans-serif;
+    font-size: 36px;
+    line-height: 48px;
+    font-weight: 700;
+}
+
+.contacts-list {
+    margin-left: 36px;
+    width: 243px;
+}
+
+.contacts-label {
+    margin: 0;
+    margin-bottom: 21px;
+}
+
+.contacts-description {
+    margin: 0;
+    margin-bottom: 32px;
+    font-weight: 500;
+}
+
+/* футер */
+.page-footer {
+    min-height: 97px;
+
+    color: #ffffff;
+    background-color: #AE7C78;
+}
+
+.footer-navigation {
+    padding: 24px 115px 41px 125px;
+    display: flex;
+    /* align-items: center;*/
+    justify-content: space-between;
+}
+
+.footer-list {
+    padding: 0 104px;
+    display: flex;
+    flex-grow: 1;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.footer-list a {
+    color: inherit;
+}
+
+.footer-navigation-menu a {
+    color: inherit;
+}
+
+.footer-list a:hover::after,
+.footer-list a:focus::after {
+   content: "";
+   height: 2px;
+   background: #ffffff;
+   display: block;
+}
+
+.social-list a:hover > svg *,
+.social-list a:focus > svg *{
+    fill: black;
+}
+
+/* кнопки */
 .button {
     width: 285px;
     height: 80px;
